Create category CRUD skeleton